WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222893
[iOS] maild hits a simulated crash when ENABLE(APP_HIGHLIGHTS) is defined
https://bugs.webkit.org/show_bug.cgi?id=222893
Summary
[iOS] maild hits a simulated crash when ENABLE(APP_HIGHLIGHTS) is defined
Wenson Hsieh
Reported
2021-03-07 12:23:15 PST
Partial stack: 12 UIKitCore: +[UICalloutBar sharedCalloutBar] 12 UIKitCore: -[UIMenuController setMenuItems:] 12 WebKit: -[WKContentView(WKInteraction) setUpAppHighlightMenus] 12 WebKit: -[WKContentView(WKInteraction) _selectionChanged] 12 WebKit: WebKit::WebPageProxy::updateEditorState(WebKit::EditorState const&) 12 WebKit: WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTree(WebKit::RemoteLayerTreeTransaction const&, WebKit::RemoteScrollingCoordinatorTransaction const&) 12 WebKit: WebKit::RemoteLayerTreeDrawingAreaProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 WebKit: IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&)
Attachments
Patch
(7.78 KB, patch)
2021-03-07 13:26 PST
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-03-07 12:23:29 PST
<
rdar://problem/74230060
>
Wenson Hsieh
Comment 2
2021-03-07 13:26:25 PST
Created
attachment 422537
[details]
Patch
EWS
Comment 3
2021-03-07 14:45:45 PST
Committed
r274058
: <
https://commits.webkit.org/r274058
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422537
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug